syntax = "proto3";

package simple_kv;

import "google/protobuf/empty.proto";

message RaftMessageRequest {
  bytes message = 1;
}

message RaftMessageResponse {}

service Raft {
  rpc send_message(RaftMessageRequest) returns (RaftMessageResponse) {}
}

message KvOtherError {
  string detail = 1;
}

message KvNotLeader {
  uint64 leader_id = 1;
}

message KvInsertRequest {
  bytes key = 1;
  bytes value = 2;
}

message KvInsertResponse {
  oneof result {
    KvOtherError error = 1;
    KvNotLeader not_leader = 2;
    google.protobuf.Empty success = 3;
  }
}

message KvGetRequest {
  bytes key = 1;
}

message KvGetResponseValue {
  optional bytes value = 1;
}

message KvGetResponse {
  oneof result {
    KvOtherError error = 1;
    KvNotLeader not_leader = 2;
    KvGetResponseValue value = 3;
  }
}

message KvDeleteRequest {
  bytes key = 1;
}

message KvDeleteResponse {
  oneof result {
    KvOtherError error = 1;
    KvNotLeader not_leader = 2;
    google.protobuf.Empty success = 3;
  }
}

service Kv {
  rpc insert(KvInsertRequest) returns (KvInsertResponse) {}

  rpc get(KvGetRequest) returns (KvGetResponse) {}

  rpc Delete(KvDeleteRequest) returns (KvDeleteResponse) {}
}
