syntax = "proto3";

package skv_register;

message RegisterNodeRequest {
  uint64 node_id = 1;
  string node_uri = 3;
  string kv_uri = 4;
}

message RegisterNodeResponse {
}

message ListNodesRequest {
  uint64 self_node_id = 1;
}

message NodeInfo {
  uint64 node_id = 1;
  string node_uri = 2;
  string kv_uri = 3;
}

message ListNodesResponse {
  repeated NodeInfo node_list = 1;
}

message LeaveNodeRequest {
  uint64 node_id = 1;
}

message LeaveNodeResponse {
}

service Register {
  rpc register_node(RegisterNodeRequest) returns (RegisterNodeResponse) {}

  rpc list_nodes(ListNodesRequest) returns (ListNodesResponse) {}

  rpc leave_node(LeaveNodeRequest) returns (LeaveNodeResponse) {}
}
